# PloTwist

./: README.md  pyproject.toml
examples/: example.py
examples/report/: index.html
examples/report/plots/: plot_0.html
plotwist/: __init__.py  constants.py  data_handling.py  decorate.py  instructions.py  logging.py  make_and_push.py  plot.py  processing.py  program.py  style.mplstyle
