[tool.poetry]
name = "plotwist"
version = "0.1.0"
description = "PloTwist: A Python package for html report generation from semicolon separated python expression files (.sspe) with minimal code."
authors = ["Leonard Franz <leonard.franz@student.uni-tuebingen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
